<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    tools:context=".view.android.RowFragment"
    android:orientation="horizontal">

    <EditText
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:hint="@string/x"
        android:id="@+id/x_text_view"
        android:textAlignment="center"
        android:inputType="number" />
    <EditText
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:hint="@string/vo"
        android:id="@+id/vo_text_view"
        android:textAlignment="center"
        android:inputType="numberDecimal"/>
    <EditText
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:hint="@string/ve"
        android:id="@+id/ve_text_view"
        android:textAlignment="center"
        android:inputType="numberDecimal"/>
    <EditText
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:hint="@string/domk"
        android:id="@+id/domk_text_view"
        android:textAlignment="center"
        android:inputType="numberDecimal"/>
</LinearLayout>